# abe-froman

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  PLAN_PHASE_6.md  WISHLIST.md  example_workflow.json  plan_sketch.md  pyproject.toml
docs/: backlog-adapter-inspiration.md  test-audit-verification.md  test-audit.md
docs/plans/: stage-5a-route-node.md  stage-5b-execute-url.md
examples/: example_workflow.yaml  explicit_join.yaml  run_all_examples.yaml  smoke_test.yaml
examples/absurd-paper/: SAMPLE_OUTPUT.md  preamble.md  workflow.yaml
examples/absurd-paper/gates/: abstract_multi_dim.md  choose_topic_eval.md  integrity_check.py  outline_json.py  publish_verdict.md  review_quality.py  section_quality.md  submission_check.py
examples/jokes/: generate.md  run.py  select.md  workflow.yaml
examples/prompts/: hello.md
examples/route_classify/: workflow.yaml
tests/: conftest.py  helpers.py  mock_executor.py  test_acp_backend.py  test_builder.py  test_cli.py  test_command_executor.py  test_contracts.py  test_dynamic.py  test_gates.py  test_logging.py  test_manifest.py  test_orchestrator.py  test_persistence.py  test_phase_node.py  test_prompt.py  test_resume.py  test_resume_e2e.py  test_scaffolding.py  test_state.py  test_timeout.py
tests/acp/: test_acp_backend.py  test_concurrency.py  test_gates_llm.py
tests/architecture/: test_layers.py
tests/builder/: test_graph_shape.py
tests/e2e/: test_dynamic.py  test_fan_out_subgraph.py  test_join_node.py  test_orchestrator.py  test_recursive_subgraph.py  test_resume_cycle.py  test_route_node.py  test_timeout.py
(+106 files in other folders)
